kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-gui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
spec:
  rules:
    - host: docker-registry-gui.example.com
      http:
        paths:
          - backend:
              service:
                name: docker-registry-gui
                port:
                  name: web
            path: /
            pathType: Prefix
